--- a/css/main.css
+++ b/css/main.css
@@ -1,258 +1,14 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap"); /* Slider */
-.slick-slider {
-  position: relative;
-  display: block;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.slick-list {
-  position: relative;
-  overflow: hidden;
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-.slick-list:focus {
-  outline: none;
-}
-.slick-list.dragging {
-  cursor: pointer;
-  cursor: hand;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.slick-track {
-  position: relative;
-  left: 0;
-  top: 0;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.slick-track:before, .slick-track:after {
-  content: "";
-  display: table;
-}
-.slick-track:after {
-  clear: both;
-}
-.slick-loading .slick-track {
-  visibility: hidden;
-}
-
-.slick-slide {
-  float: left;
-  height: 100%;
-  min-height: 1px;
-  display: none;
-}
-[dir=rtl] .slick-slide {
-  float: right;
-}
-.slick-slide img {
-  display: block;
-}
-.slick-slide.slick-loading img {
-  display: none;
-}
-.slick-slide.dragging img {
-  pointer-events: none;
-}
-.slick-initialized .slick-slide {
-  display: block;
-}
-.slick-loading .slick-slide {
-  visibility: hidden;
-}
-.slick-vertical .slick-slide {
-  display: block;
-  height: auto;
-  border: 1px solid transparent;
-}
-
-.slick-arrow.slick-hidden {
-  display: none;
-}
-
-/* Slider */
-.slick-loading .slick-list {
-  background: #fff url("./ajax-loader.gif") center center no-repeat;
-}
-
-/* Icons */
-@font-face {
-  font-family: "slick";
-  src: url("./fonts/slick.eot");
-  src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-/* Arrows */
-.slick-prev,
-.slick-next {
-  position: absolute;
-  display: block;
-  height: 20px;
-  width: 20px;
-  line-height: 0px;
-  font-size: 0px;
-  cursor: pointer;
-  background: transparent;
-  color: transparent;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  padding: 0;
-  border: none;
-  outline: none;
-}
-.slick-prev:hover, .slick-prev:focus,
-.slick-next:hover,
-.slick-next:focus {
-  outline: none;
-  background: transparent;
-  color: transparent;
-}
-.slick-prev:hover:before, .slick-prev:focus:before,
-.slick-next:hover:before,
-.slick-next:focus:before {
-  opacity: 1;
-}
-.slick-prev.slick-disabled:before,
-.slick-next.slick-disabled:before {
-  opacity: 0.25;
-}
-.slick-prev:before,
-.slick-next:before {
-  font-family: "slick";
-  font-size: 20px;
-  line-height: 1;
-  color: white;
-  opacity: 0.75;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.slick-prev {
-  left: -25px;
-}
-[dir=rtl] .slick-prev {
-  left: auto;
-  right: -25px;
-}
-.slick-prev:before {
-  content: "←";
-}
-[dir=rtl] .slick-prev:before {
-  content: "→";
-}
-
-.slick-next {
-  right: -25px;
-}
-[dir=rtl] .slick-next {
-  left: -25px;
-  right: auto;
-}
-.slick-next:before {
-  content: "→";
-}
-[dir=rtl] .slick-next:before {
-  content: "←";
-}
-
-/* Dots */
-.slick-dotted.slick-slider {
-  margin-bottom: 30px;
-}
-
-.slick-dots {
-  position: absolute;
-  bottom: -25px;
-  list-style: none;
-  display: block;
-  text-align: center;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-.slick-dots li {
-  position: relative;
-  display: inline-block;
-  height: 20px;
-  width: 20px;
-  margin: 0 5px;
-  padding: 0;
-  cursor: pointer;
-}
-.slick-dots li button {
-  border: 0;
-  background: transparent;
-  display: block;
-  height: 20px;
-  width: 20px;
-  outline: none;
-  line-height: 0px;
-  font-size: 0px;
-  color: transparent;
-  padding: 5px;
-  cursor: pointer;
-}
-.slick-dots li button:hover, .slick-dots li button:focus {
-  outline: none;
-}
-.slick-dots li button:hover:before, .slick-dots li button:focus:before {
-  opacity: 1;
-}
-.slick-dots li button:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "•";
-  width: 20px;
-  height: 20px;
-  font-family: "slick";
-  font-size: 6px;
-  line-height: 20px;
-  text-align: center;
-  color: black;
-  opacity: 0.25;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.slick-dots li.slick-active button:before {
-  color: black;
-  opacity: 0.75;
-}
-
-.reviews__container {
-  padding-left: 20px;
-  padding-right: 20px;
-  width: 320px;
-}
 @media screen and (min-width: 768px) {
-  .reviews__container {
-    width: 768px;
+  .reviews {
+    padding-left: 74px;
+    padding-right: 74px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .reviews__container {
-    width: 1200px;
+  .reviews {
+    padding-left: 116px;
+    padding-right: 116px;
   }
 }
 
@@ -260,6 +16,8 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 85px;
+  height: 85px;
 }
 
 .reviews__thumb {
@@ -271,93 +29,74 @@
           justify-content: center;
   position: relative;
   text-align: center;
-  margin-top: 32px;
-  margin: auto;
-  width: 280px;
-  background: #FAFAFA;
+  padding: 43px 50px 17px 50px;
+  margin: 32px auto;
+  background: var(--bgcQuote);
   z-index: 9;
 }
 @media screen and (min-width: 768px) {
   .reviews__thumb {
-    width: 620px;
-    margin-top: 20px;
+    padding: 37px 6px 36px;
+    margin-top: 20px auto;
   }
 }
 @media screen and (min-width: 1200px) {
   .reviews__thumb {
-    width: 968px;
+    padding: 47px 73px 31px;
     margin-top: 16px;
   }
 }
 
-.reviews__thumb::before {
-  content: url(../images/jumpers.png);
-  position: absolute;
+.reviews__thumb::after {
+  content: "";
   display: block;
-  left: 53px;
-  top: 30px;
-  z-index: -1;
-}
-@media screen and (min-width: 768px) {
-  .reviews__thumb::before {
-    left: 6px;
-    top: 20px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .reviews__thumb::before {
-    left: 72px;
-    top: 32px;
-  }
-}
-
-.reviews__line {
-  margin: 74px 50px 17px;
-  width: 180px;
-  height: 217px;
-  background: repeating-linear-gradient(rgb(225, 225, 225) 1px, transparent 3px 30px);
-}
-@media screen and (min-width: 768px) {
-  .reviews__line {
-    width: 608px;
-    height: 62px;
-    margin-top: 68px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .reviews__line {
-    width: 821px;
-    height: 31px;
-    margin: 73px 31px 73px;
-  }
+  background-image: url(/images/dots.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 32px;
+  height: 4px;
+  position: absolute;
+  bottom: -16px;
 }
 
 .reviews__text {
-  position: absolute;
-  margin: auto;
-  padding-top: 43px;
-  width: 157px;
+  position: relative;
   font-family: "DM Sans";
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 2.55;
+  line-height: 2.58;
   text-align: center;
+  padding: 0 8px 9px 15px;
+  background-image: repeating-linear-gradient(to bottom, rgba(250, 250, 250, 0), rgba(250, 250, 250, 0) 29px, #e1e1e1 30px, #e1e1e1 31px);
 }
 @media screen and (min-width: 768px) {
   .reviews__text {
-    width: 514px;
-    padding-top: 37px;
+    padding: 0 49px 8px 45px;
     font-size: 14px;
     line-height: 2.16;
   }
 }
 @media screen and (min-width: 1200px) {
   .reviews__text {
-    width: 750px;
-    padding-top: 47px;
+    padding: 0 35px 8px 37px;
     font-size: 16px;
     line-height: 1.86;
+  }
+}
+
+.reviews__text::before {
+  content: url(/images/brackets.png);
+  position: absolute;
+  display: block;
+  left: 0;
+  top: -13px;
+  z-index: -1;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .reviews__text::before {
+    top: -17px;
   }
 }
 
@@ -381,8 +120,8 @@
   line-height: 1, 86;
   text-align: center;
   margin: 0;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  margin-top: 32px;
+  margin-bottom: 16px;
 }
 @media screen and (min-width: 768px) {
   .reviews__name {
@@ -419,4 +158,43 @@
 .slick-dots li {
   width: 12px;
   height: 12px;
+}
+
+.slick-prev,
+.slick-next {
+  display: none;
+}
+
+.slider .slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+}
+
+.slider .slick-dots li {
+  list-style: none;
+  margin: 0 20px;
+}
+
+.slider .slick-dots button {
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  background-color: #d9d9d9;
+  border-color: transparent;
+  color: #d9d9d9;
+  border-radius: 50%;
+}
+
+.slider .slick-dots .slick-active button {
+  background-color: transparent;
+  border-radius: unset;
+  background-image: url(/images/home.png);
 }/*# sourceMappingURL=main.css.map */
