--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,160 +1,181 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
-@import './components/slick';
-@import './components/slick-theme';
+.reviews {
 
-.reviews__container {
-    padding-left: 20px;
-    padding-right: 20px;
-    width: 320px;
-
-    @media screen and (min-width:768px) {
-        width: 768px;
+    @media screen and (min-width: 768px) {
+      padding-left: 74px;
+      padding-right: 74px;
     }
-
-    @media screen and (min-width:1200px) {
-        width: 1200px;
+  
+    @media screen and (min-width: 1200px) {
+      padding-left: 116px;
+      padding-right: 116px;
     }
-}
-
-.reviews__image {
+  }
+  
+  .reviews__image {
     display: block;
     margin-left: auto;
-    margin-right: auto
-}
-
-.reviews__thumb {
+    margin-right: auto;
+    width: 85px;
+    height: 85px;
+  }
+  
+  .reviews__thumb {
     display: flex;
     justify-content: center;
     position: relative;
     text-align: center;
-    margin-top: 32px;
-    margin: auto;
-    width: 280px;
-    background: #FAFAFA;
+    padding: 43px 50px 17px 50px;
+    margin: 32px auto;
+    background: var(--bgcQuote);
     z-index: 9;
-
-    @media screen and (min-width:768px) {
-        width: 620px;
-        margin-top: 20px;
+  
+    @media screen and (min-width: 768px) {
+      padding: 37px 6px 36px;
+      margin-top: 20px auto;
     }
-
-    @media screen and (min-width:1200px) {
-        width: 968px;
-        margin-top: 16px;
+  
+    @media screen and (min-width: 1200px) {
+      padding: 47px 73px 31px;
+      margin-top: 16px;
     }
-}
-
-.reviews__thumb::before {
-    content: url(../images/jumpers.png);
-    position: absolute;
+  }
+  
+  .reviews__thumb::after {
+    content: '';
     display: block;
-    left: 53px;
-    top: 30px;
-    z-index: -1;
-
-    @media screen and (min-width:768px) {
-        left: 6px;
-        top: 20px;
-    }
-
-    @media screen and (min-width:1200px) {
-        left: 72px;
-        top: 32px;
-    }
-}
-
-.reviews__line {
-    margin: 74px 50px 17px;
-    width: 180px;
-    height: 217px;
-    background: repeating-linear-gradient(rgba(225, 225, 225, 1) 1px, transparent 3px 30px);
-
-    @media screen and (min-width:768px) {
-        width: 608px;
-        height: 62px;
-        margin-top: 68px;
-        
-    }
-
-    @media screen and (min-width:1200px) {
-        width: 821px;
-        height: 31px;
-        margin: 73px 31px 73px;
-    }
-}
-
-.reviews__text {
+    background-image: url(/images/dots.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 32px;
+    height: 4px;
     position: absolute;
-    margin: auto;
-    padding-top: 43px;
-    width: 157px;
+    bottom: -16px;
+  }
+  
+  .reviews__text {
+    position: relative;
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
-    line-height: 2.55;
-    text-align: center;    
-
-    @media screen and (min-width:768px) {
-        width: 514px;
-        padding-top: 37px;
-        font-size: 14px;
-        line-height: 2.16;
+    line-height: 2.58;
+    text-align: center;
+    padding: 0 8px 9px 15px;
+      background-image: repeating-linear-gradient(
+      to bottom,
+      #fafafa00,
+      #fafafa00 29px,
+      #e1e1e1 30px,
+      #e1e1e1 31px
+    ); 
+  
+    @media screen and (min-width: 768px) {
+      padding: 0 49px 8px 45px;
+      font-size: 14px;
+      line-height: 2.16;
     }
-
-    @media screen and (min-width:1200px) {
-        width: 750px;
-        padding-top: 47px;
-        font-size: 16px;
-        line-height: 1.86;
+  
+    @media screen and (min-width: 1200px) {
+      padding: 0 35px 8px 37px;
+      font-size: 16px;
+      line-height: 1.86;
     }
-}
-
-.reviews__spot {
+  }
+  
+  .reviews__text::before {
+    content: url(/images/brackets.png);
+    position: absolute;
+    display: block;
+    left: 0;
+    top: -13px;
+    z-index: -1;
+  
+    @media screen and (min-width: 768px) and (max-width:1199px) {
+      top: -17px;
+    }
+  
+  }
+  
+  .reviews__spot {
     display: flex;
     justify-content: center;
     padding-top: 16px;
-
-    @media screen and (min-width:1200px) {
-        padding-top: 4px;
+  
+    @media screen and (min-width: 1200px) {
+      padding-top: 4px;
     }
-}
-
-.reviews__name {
+  }
+  
+  .reviews__name {
     font-size: 14px;
-    line-height: 1,86;
+    line-height: 1, 86;
     text-align: center;
     margin: 0;
-    padding-top: 16px;
-    padding-bottom: 16px;
-
-     @media screen and (min-width:768px) {
-        font-size: 16px;
-        padding-bottom: 32px;
+    margin-top: 32px;
+    margin-bottom: 16px;
+  
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+      padding-bottom: 32px;
     }
-
-    @media screen and (min-width:1200px) {
-        font-size: 20px;
-        padding-bottom: 32px;
+  
+    @media screen and (min-width: 1200px) {
+      font-size: 20px;
+      padding-bottom: 32px;
     }
-}
-
-.spot__item {
+  }
+  
+  .spot__item {
     display: block;
     width: 4px;
     height: 4px;
     margin-left: 10px;
-    
-}
-
-/* Лента слайдов */
-.slick-track{
+  }
+  
+  /* Лента слайдов */
+  .slick-track {
     display: flex;
-}
-
-/* Ограничивающая оболочка */
-.slick-list {
+  }
+  
+  /* Ограничивающая оболочка */
+  .slick-list {
     overflow: hidden;
-}
-
-
+  }
+  
+  .slick-dots li {
+    width: 12px;
+    height: 12px;
+  }
+  
+  .slick-prev,
+  .slick-next {
+    display: none;
+  }
+  
+  .slider .slick-dots {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+  }
+  .slider .slick-dots li {
+    list-style: none;
+    margin: 0 20px;
+  }
+  
+  .slider .slick-dots button {
+    font-size: 0;
+    width: 12px;
+    height: 12px;
+    background-color: #d9d9d9;
+    border-color: transparent;
+    color: #d9d9d9;
+    border-radius: 50%;
+  }
+  
+  .slider .slick-dots .slick-active button {
+    background-color: transparent;
+    border-radius: unset;
+    background-image: url(/images/home.png);
+  }
